--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="login">
 <h1>ENTER THE WHATSAPP NUMBER</h1>
 <form name="myform" onsubmit="connect()">
-<p><input type="tel" name="login" value="" placeholder="Eg. +91 1234567890"></p>
+<p><input type="tel" name="login" value="+91" placeholder="Eg. +91 1234567890"></p>
 <p class="submit"><input type="submit" name="commit" value="CONNECT"></p>
 
 </form>
